<resources>
    <string name="app_name">AppChatTest</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="next_to_password">TIẾP THEO</string>
    <string name="create_account">Tạo tài khoản</string>
    <string name="string_ho_ten">Họ tên</string>
    <string name="string_male">Nam</string>
    <string name="string_female">Nữ</string>
    <string name="string_sex">Giới tính</string>
    <string name="hint_enter_confirm_password">Nhập lại mật khẩu</string>
    <string name="hint_enter_password">Mật khẩu</string>
    <string name="vnme">VNMe</string>
    <string name="string_birth">Ngày sinh</string>
    <string name="password">Password</string>
    <string name="string_search_chat">Tìm cuộc trò chuyện</string>
    <string name="search_friend">Tìm bạn bè</string>
    <string name="phone_number_title">Số điện thoại:</string>
    <string name="string_login">ĐĂNG NHẬP</string>
    <string name="title_activity_main_navigation">MainNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bt_message">Nhắn tin</string>
    <string name="bt_unfriend">Hủy kết bạn</string>
    <string name="change_password">Password</string>
    <string name="change_new_password">New Password</string>
    <string name="button_changePass">Đổi mật khẩu</string>
    <string name="button_back_handle">Hủy</string>
    <string name="textView_forgotPass">Nếu bạn quên mật khẩu thì nhấn vào dòng text này!</string>
    <string name="button_ResetPass">Đặt lại mật khẩu</string>
    <string name="textView_info_ResetPass">Mật khẩu sẽ được gửi đến email này:</string>
    <string name="textView_Info_Location_Email">Nếu không tìm thấy email,\nvui lòng kiểm tra trong Spam hoặc Quảng cáo</string>
    <string name="changeProfileButton">Đổi thông tin</string>
</resources>
