<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ForgotPassActivity">

    <TextView
        android:text="@string/textView_info_ResetPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_CreateAcc"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/reso"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/editText_email_Confirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/editText_email_Confirm"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:importantForAutofill="no"
        android:background="@drawable/round_textbox"
        android:elevation="2dp"
        android:fontFamily="@font/reso"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="22dp"
        android:paddingTop="10dp"
        android:paddingEnd="22dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorNonText"
        android:textSize="25sp"
        android:textCursorDrawable="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65"/>

    <Button
        android:id="@+id/button_resetPass"
        android:text="@string/button_ResetPass"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/round_button"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/reso"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/editText_email_Confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:text="@string/textView_Info_Location_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_InFo_Location_Email"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/reso"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="16sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_resetPass"/>
</androidx.constraintlayout.widget.ConstraintLayout>