<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@drawable/background"
                                                   tools:context=".LoginActivity">

    <ImageView
            android:id="@+id/icon_major"
            android:layout_width="wrap_content"
            android:layout_height="290dp"
            android:src="@drawable/icon_not_small"
            android:contentDescription="@string/todo"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.1"/>

    <EditText
            android:id="@+id/editText_Login"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:importantForAutofill="no"
            android:background="@drawable/round_textbox"
            android:elevation="2dp"
            android:fontFamily="@font/reso"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="22dp"
            android:paddingTop="10dp"
            android:paddingEnd="22dp"
            android:paddingBottom="10dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorNonText"
            android:textSize="25sp"
            android:textCursorDrawable="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.65"/>

    <EditText
            android:id="@+id/editText_Login_Pass"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:importantForAutofill="no"
            android:background="@drawable/round_textbox"
            android:elevation="2dp"
            android:fontFamily="@font/reso"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="22dp"
            android:paddingTop="10dp"
            android:paddingEnd="22dp"
            android:paddingBottom="10dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorNonText"
            android:textSize="25sp"
            android:textCursorDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_Login"/>
    <Button
            android:text="@string/string_login"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_login"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_button"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/reso"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/editText_Login_Pass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_CreateAcc"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/reso"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/button_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:text="@string/textView_forgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_forgot_pass"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/reso"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/textView_CreateAcc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>