<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@drawable/background"
                                                   tools:context=".MainActivity">
    <ImageView android:id="@+id/icon_major"
               android:layout_width="wrap_content"
               android:layout_height="301dp"
               android:src="@drawable/icon_not_small"
               android:contentDescription="@string/todo"
               android:layout_marginTop="15dp"
               app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
               android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
               android:layout_marginStart="8dp"/>

    <EditText android:layout_width="290dp"
              android:layout_height="wrap_content"
              android:layout_marginEnd="8dp"
              android:layout_marginStart="8dp"
              android:paddingStart="22dp"
              android:paddingTop="10dp"
              android:paddingEnd="22dp"
              android:paddingBottom="10dp"
              android:background="@drawable/round_textbox"
              android:elevation="2dp"
              android:fontFamily="@font/reso"
              android:textSize="25sp"
              android:textColor="@color/colorPrimary"
              android:textColorHint="@color/colorNonText"
              android:inputType="textEmailAddress"
              android:hint="@string/email"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              android:id="@+id/editText" app:layout_constraintBottom_toBottomOf="parent"
              android:layout_marginBottom="8dp" android:layout_marginTop="8dp"
              app:layout_constraintTop_toBottomOf="@+id/icon_major" app:layout_constraintVertical_bias="0.35"/>
    <Button
            android:text="@string/next_to_password"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/next_button"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_button"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/reso"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_create_acc"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/reso"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/next_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>