<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        tools:context=".UpdateProfileActivity">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_update_avatar"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/avatar"
            app:civ_border_color="@color/colorPrimaryLight"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout_UpdateProfile"
            android:layout_width="match_parent"
            android:layout_height="375dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_update_avatar">

            <EditText
                android:id="@+id/editText_updateHoten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/round_textbox"
                android:elevation="2dp"
                android:ems="10"
                android:fontFamily="@font/reso"
                android:hint="@string/string_ho_ten"
                android:inputType="textPersonName"
                android:paddingStart="18dp"
                android:paddingTop="8dp"
                android:paddingEnd="18dp"
                android:paddingBottom="8dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorNonText"
                android:textCursorDrawable="@null"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText_email_Update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/round_textbox"
                android:elevation="2dp"
                android:ems="10"
                android:fontFamily="@font/reso"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:paddingStart="18dp"
                android:paddingTop="8dp"
                android:paddingEnd="18dp"
                android:paddingBottom="8dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorNonText"
                android:textCursorDrawable="@null"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textview_Sex_Update"
                    android:layout_width="196dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="25dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/reso"
                    android:gravity="start|center_vertical"
                    android:text="@string/string_sex"
                    android:textSize="18sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButton_nu_Update"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/colorPrimary"
                        android:fontFamily="@font/reso"
                        android:text="@string/string_female" />

                    <RadioButton
                        android:id="@+id/radioButton_nam_Update"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/colorPrimary"
                        android:fontFamily="@font/reso"
                        android:text="@string/string_male" />
                </RadioGroup>

            </LinearLayout> <!-- red element -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView

                    android:id="@+id/textView_NgaySinh_Update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:fontFamily="@font/reso"
                    android:text="@string/string_birth"
                    android:textSize="18sp" />

                <DatePicker
                    android:layout_width="match_parent"
                    android:layout_height="78dp"
                    android:calendarViewShown="false"
                    android:id="@+id/datePicker_Update"
                    android:datePickerMode="spinner"
                    android:dayOfWeekTextAppearance="@style/TextAppearance.AppCompat.Small"
                    android:duplicateParentState="true"
                    android:fadeScrollbars="true"
                    android:scrollbars="vertical" />
            </LinearLayout>

            <EditText
                android:id="@+id/editText_SDT_Update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/round_textbox"
                android:elevation="2dp"
                android:ems="10"
                android:fontFamily="@font/reso"
                android:hint="Số diện thoại"
                android:inputType="number"
                android:paddingStart="18dp"
                android:paddingTop="8dp"
                android:paddingEnd="18dp"
                android:paddingBottom="8dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorNonText"
                android:textCursorDrawable="@null"
                android:textSize="20sp"
                tools:ignore="Autofill" />
        </LinearLayout>

        <Button
            android:id="@+id/button_Update_Profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/changeProfileButton"
            android:textSize="15sp"
            android:background="@drawable/round_button"
            android:fontFamily="@font/reso"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="60dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout_UpdateProfile"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>