<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ChangePassActivity">

    <EditText
        android:id="@+id/editText_Change_Pass"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:importantForAutofill="no"
        android:background="@drawable/round_textbox"
        android:elevation="2dp"
        android:fontFamily="@font/reso"
        android:hint="@string/change_password"
        android:inputType="textPassword"
        android:paddingStart="22dp"
        android:paddingTop="10dp"
        android:paddingEnd="22dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorNonText"
        android:textSize="25sp"
        android:textCursorDrawable="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"/>

    <EditText
        android:id="@+id/editText_Change_NewPass"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:importantForAutofill="no"
        android:background="@drawable/round_textbox"
        android:elevation="2dp"
        android:fontFamily="@font/reso"
        android:hint="@string/change_new_password"
        android:inputType="textPassword"
        android:paddingStart="22dp"
        android:paddingTop="10dp"
        android:paddingEnd="22dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorNonText"
        android:textSize="25sp"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Change_Pass"/>

    <EditText
        android:id="@+id/editText_Change_NewPass_2"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:importantForAutofill="no"
        android:background="@drawable/round_textbox"
        android:elevation="2dp"
        android:fontFamily="@font/reso"
        android:hint="@string/change_new_password"
        android:inputType="textPassword"
        android:paddingStart="22dp"
        android:paddingTop="10dp"
        android:paddingEnd="22dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorNonText"
        android:textSize="25sp"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Change_NewPass"/>

    <Button
        android:id="@+id/button_changePass_Confirm"
        android:text="@string/button_changePass"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_button"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/reso"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/editText_Change_NewPass_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/button_changePass_cancel"
        android:text="@string/button_back_handle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_button"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/reso"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/button_changePass_Confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>